# bitcoin-rest

./: .env  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs  main.rs
src/benches/: block.rs
