[package]
name = "bitcoin-rest"
version = "0.0.1"
authors = ["Masahiko Hyuga <mail@mhyuga.jp>"]
license = "MIT"
description = "Bitcoin Core REST API client and library for Rust"
repository = "https://github.com/visvirial/bitcoin-rest"
documentation = "https://docs.serde.rs/bitcoin-rest/"
categories = ["api-bindings"]
keywords = ["bitcoin", "cryptocurrency", "rest"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0"
hex = "0.4"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bitcoin_hashes = "0.9"
bitcoin = "0.26"
