[package]
name = "bitcoin-rest"
version = "0.0.6"
authors = ["Masahiko Hyuga <mail@mhyuga.jp>"]
license = "MIT"
description = "Bitcoin Core REST API client and library for Rust"
repository = "https://github.com/visvirial/bitcoin-rest"
categories = ["api-bindings"]
keywords = ["bitcoin", "cryptocurrency", "rest"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
bitcoin = "0.26"

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
