[package]
name = "bitcoin-rest"
version = "0.1.1"
authors = ["Masahiko Hyuga <mail@mhyuga.jp>"]
license = "MIT"
description = "Bitcoin Core REST API client and library for Rust"
repository = "https://github.com/visvirial/bitcoin-rest"
categories = ["api-bindings"]
keywords = ["bitcoin", "cryptocurrency", "rest"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "softforks" ]
softforks = []

[dependencies]
bytes = "1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
bitcoin = "0.26"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
criterion = { version = "0.3", features = [] }

[[bench]]
name = "block"
path = "src/benches/block.rs"
harness = false
